[package]
name = "pallet-data-market"
authors = ["blockchain labs"]
description = "Data Market pallet"
version = "0.1.0"
license = "Unlicense"
homepage = "https://bc-labs.net/"
repository = "https://github.com/InfraBlockchain/infra-substrate/"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
frame-system = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }