[package]
name = "urauth"
authors = ["blockchain labs"]
description = "URAuth pallet"
version = "0.1.0"
license = "Unlicense"
homepage = "https://bc-labs.net/"
repository = "https://github.com/InfraBlockchain/infra-substrate/"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = [
	"derive",
], default-features = false }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }
lite-json = { version = "0.2.0", default-features = false }
safe-regex = "0.2.5"

# Substrate
frame-benchmarking = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, optional = true, branch = "master" }
frame-support = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
frame-system = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-std = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-consensus-vrf = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
pallet-collective = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }

[dev-dependencies]
serde = { version = "1.0.132" }

# Substrate
sp-io = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
	"codec/std",
	"scale-info/std",
    "lite-json/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
    "pallet-collective/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-std/std",
    "sp-consensus-vrf/std",
]
try-runtime = ["frame-support/try-runtime"]
