[package]
name = "pallet-urauth-runtime-api"
version = "0.1.0"
authors = ["blockchain labs"]
edition = "2021"
license = "Apache-2.0"
description = "RPC runtime API for urauth FRAME pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
sp-api = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
pallet-urauth = { version = "0.1.1", default-features = false, path = "../" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-api/std",
    "pallet-urauth/std",
]